# ggames

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analysis.py  computer.py  cop_robber_game.py  main.py  outerplanar.py  output_analysis.csv  output_analysis_new_algo.csv  pyproject.toml  reachability_game.py  reachable_game.py  setup.cfg  test.py  tox.ini  utils.py
graph_test_dir/: d_cycle_5.json  d_tree.json
src/ggames/: .graph.py.swp  __init__.py  cop_robber_game.py  cops_robbers_game.py  graph.py  reachability_game.py
src/kcop-win/: __init__.py  __main__.py
test_dir/: correct_input  output
tests/: test_cop_robber_game.py  test_graph.py  test_kcop_win_console_script.py  test_reachability_game.py
tests/graph_test_dir/: d_hypercube_3.json
tests/tests_graph_json/: cycle5.json  d_cycle_5.json  error_json_format_d_cycle5.json  error_length_tau_d_cycle5.json  error_unexpected_edge_pattern_d_cycle5.json  error_unexpected_vertex_d_cycle5.json  path4.json
