[metadata]
name = ggames
version = 1.0.1
author = Gabriel Fortin-Leblanc
author_email = gabriel.fortin-leblanc@umontreal.ca
description = A package composed of tools for different games played on graph.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gfl-math-stat-info/ggames

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kcop-win = ggames:kcop_win
